# MultiplayerChat

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  multiplayerChat.sublime-project
client/: CMakeLists.txt
client/src/: main.c
client/tests/: CmakeLists.txt
client/tests/src/: main_test.c
lib/network/: CMakeLists.txt
lib/network/includes/: constants.h  network_constants.h  packet.h  packet_type.h  socket.h
lib/network/src/: socket.c
lib/system/: CMakeLists.txt
lib/system/includes/: err_quit.h  err_sys.h  writen.h
lib/system/src/: err_quit.c  err_sys.c  writen.c
server/: CMakeLists.txt
server/includes/: constants.h
server/src/: main.c
server/tests/: CMakeLists.txt  MultiplayerChat_TestServer
server/tests/src/: main_test.c
